--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "^9.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "sass": "^1.26.5"
+    "sass": "^1.26.5",
+    "unirest": "^0.6.0"
   }
 }
