--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,5 +15,6 @@
   ],
   "theme_color":"#FF0088",
   "background_color":"#ffffff",
-  "display":"standalone"
+  "display":"standalone",
+  "start_url": "https://music-player.now.sh/"
 }
