--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/debabrata100/music-player#readme",
   "dependencies": {
     "next": "^9.4.0",
+    "next-pwa": "^2.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "sass": "^1.26.5"
